# hermes-sync

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  __init__.py  config.py  config.yaml.example  plugin.yaml  pyproject.toml  sync.py  watcher.py
backends/: github.py
hermes_sync/: __init__.py  cli.py  config.py  git_askpass.py  merge.py  sync.py  watcher.py
hermes_sync/backends/: __init__.py  github.py
hermes_sync/security/: __init__.py  encryption.py  patterns.py  signer.py
security/: __init__.py  patterns.py  signer.py
tests/: conftest.py  test_encryption.py  test_merge.py  test_platform_scope.py  test_security.py  test_signer.py  test_sync.py
